--- a/websocket/chat.html
+++ b/websocket/chat.html
@@ -8,7 +8,7 @@
 <div id="msg"></div>
 
 <input type="text" id="text">
-<input type="submit" value="发送数据" onclick="song()">
+<input type="submit" value="发送数据" onclick="send()">
 </body>
 
 <script>
@@ -26,7 +26,7 @@
         msg.innerHTML = websocket.readyState;
     };
 
-    function song(){
+    function send(){
         var text = document.getElementById('text').value;
         document.getElementById('text').value = '';
         //向服务器发送数据
